--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next build && next export",
+    "deploy": "npm run build && npm run export && touch out/.nojekyll && gh-pages -d out"
   },
   "dependencies": {
+    "axios": "1.6.2",
+    "framer-motion": "11.0.17",
+    "howler": "2.2.4",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zustand": "4.4.1",
-    "framer-motion": "11.0.17",
-    "howler": "2.2.4",
-    "axios": "1.6.2"
+    "zustand": "4.4.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
